Refactor file transfer implementation: - Removed SendFile class to streamline file sending logic. - Updated SendFileGUI to accommodate new parameters for file sending. - Optimized SendFileOptimized to utilize virtual threads for improved concurrency and performance.